complimentary product component

--- a/assets/custom-sections.js.liquid
+++ b/assets/custom-sections.js.liquid
@@ -274,7 +274,7 @@ class ScrollContainer extends HTMLElement {
   }
 }
 
-
+customElements.define('scroll-wrapper-slider', ScrollContainer);
 class horizontalProductCard extends HTMLElement {
   constructor() {
     super();
