--- a/src/scss/views/pdp.scss
+++ b/src/scss/views/pdp.scss
@@ -1,4 +1,4 @@
-.template-product {
+.template--product-Yonder-dev {
 
   .sticky-product-gallery{
     product-gallery{
@@ -567,6 +567,10 @@
     //complimentaory product
     .product-info__block-item[data-block-type="complementary-products-v2"]{
       .complementary-products__header {
+        justify-content: start;
+        @media screen and (max-width: 999px) {
+          row-gap: 10px;
+        }
         p{
           color: #1C1C1C;
           font-family: Nunito Sans;
@@ -704,7 +708,7 @@
 
 
 //working on spacing between elemnts
-.product-Yonder-dev{
+.template--product-Yonder-dev{
   .product-info__block-list{
     .product-info__block-item[data-block-type="title-with-rating"]{
       margin-block-end: 0.813rem;
@@ -762,6 +766,15 @@
         margin-block-end: 2.063rem;
       }
     }
+    .product-info__block-item[data-block-type="accordion-group"] {
+      margin-block-start: 0rem;
+      margin-block-end: 2.05rem;
+      @media screen and (max-width: 999px) {
+        margin-block-end: 2.05rem;
+      }
+    }
+
+    
     
   }
 }
