add customization effect to some points

--- a/assets/custom-sections.js.liquid
+++ b/assets/custom-sections.js.liquid
@@ -241,7 +241,10 @@ class ScrollContainer extends HTMLElement {
     const container = this.querySelector('.inner_container_items');
     const leftButton = this.querySelector('.left-button');
     const rightButton = this.querySelector('.right-button');
-      
+
+    // Add a 'slide-directly-edge' attribute and check its value
+    const slideDirectlyEdge = this.hasAttribute('slide-directly-edge');
+
     const updateButtonVisibility = () => {
       // Show/hide the left button based on scroll position
       if (container.scrollLeft > 0 && leftButton) {
@@ -252,7 +255,7 @@ class ScrollContainer extends HTMLElement {
       // Show/hide the right button based on scroll position
       if (container.scrollLeft < container.scrollWidth - container.clientWidth - 10 && rightButton) {
         rightButton.style.visibility = 'visible';
-      } else if(rightButton) {
+      } else if (rightButton) {
         rightButton.style.visibility = 'hidden';
       }
     };
@@ -266,24 +269,33 @@ class ScrollContainer extends HTMLElement {
     };
 
     leftButton?.addEventListener('click', () => {
-      container.scrollLeft -= 300; // Adjust the scrolling speed as needed
+      if (slideDirectlyEdge) {
+        container.scrollLeft = 0; // Scroll to the left edge
+      } else {
+        container.scrollLeft -= 300; // Normal scrolling
+      }
     });
 
     rightButton?.addEventListener('click', () => {
-      container.scrollLeft += 300; // Adjust the scrolling speed as needed
+      if (slideDirectlyEdge) {
+        container.scrollLeft = container.scrollWidth - container.clientWidth; // Scroll to the right edge
+      } else {
+        container.scrollLeft += 300; // Normal scrolling
+      }
     });
 
     container?.addEventListener('scroll', scrollHandler);
     window.addEventListener('resize', resizeHandler);
-    
+
     updateButtonVisibility(); // Trigger initial visibility check
 
-    // Add an event listener for the refresh scrill
-    this.addEventListener('slider-scroll:refresh',updateButtonVisibility);
+    // Add an event listener for the refresh scroll
+    this.addEventListener('slider-scroll:refresh', updateButtonVisibility);
   }
 }
 
 customElements.define('scroll-wrapper-slider', ScrollContainer);
+
 class horizontalProductCard extends HTMLElement {
   constructor() {
     super();
