--- a/snippets/buy-buttons-with-quantity.liquid
+++ b/snippets/buy-buttons-with-quantity.liquid
@@ -24,7 +24,7 @@ Supported variables
     <form-wrapping-container>
       {%- form 'product', product, is: 'product-form', id: form_id -%}
         
-        <scroll-wrapper-slider class="without-scroll scroll-customize-wrapper-mrb">
+        <scroll-wrapper-slider class="without-scroll scroll-customize-wrapper-mrb" slide-directly-edge="true">
           <span class="arrow-slider left-button">{% render 'arrow-slider-left' %}</span>
           <span class="arrow-slider right-button">{% render 'arrow-slider-left' %}</span>
 
