--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,3 +3,4 @@ $active-color:#0500FF;
 
 @import 'views/pdp.scss';
 @import 'components/scroll-slider.scss';
+@import 'components/image-with-text.scss';
