--- a/sections/multi-column-v2.liquid
+++ b/sections/multi-column-v2.liquid
@@ -23,68 +23,149 @@
         }
       }
     </style>
-  
-    <div class="section-spacing {% if section.settings.separate_section_with_border %}bordered-section{% endif %}">
-      <div class="container {% unless section.settings.container_size == 'full' %}container--{{ section.settings.container_size }}{% endunless %}">
-        <div class="section-stack main-stack-container">
-          {%- render 'section-header', subheading: section.settings.subheading, heading: section.settings.title, content: section.settings.content, text_alignment: section.settings.content_alignment -%}
-  
-          <multi-column class="multi-column {% unless section.settings.stack_on_mobile %}scroll-area snap-x bleed md:unbleed{% endunless %}">
-            {%- for block in section.blocks -%}
-              <div class="multi-column__item {% if section.settings.overlap_image and block.settings.title != blank %}multi-column__item--overlap{% endif %} snap-center group" {{ block.shopify_attributes }}>
-                {%- capture sizes_attribute -%}
-                  (max-width: 699px) 53vw, (max-width: 999px) 38vw, calc((100vw - 3rem * 2) / {{ section.settings.columns_per_row }})
-                {%- endcapture -%}
-  
-                {%- liquid
-                  capture media_content
-                    if block.type == 'image_with_text' and block.settings.image != blank
-                      echo block.settings.image | image_url: width: block.settings.image.width | image_tag: loading: 'lazy', sizes: sizes_attribute, widths: '300,400,500,600,800,1000,1200,1400,1600,1800', class: 'zoom-image group-hover:zoom'
-                    elsif block.type == 'video_with_text' and block.settings.video != blank
-                      if block.settings.autoplay and block.settings.loop
-                        assign show_controls = false
-                      else
-                        assign show_controls = true
-                      endif
-  
-                      render 'media', media: block.settings.video, autoplay: block.settings.autoplay, loop: block.settings.loop, controls: show_controls, sizes: sizes_attribute, play_button_background: block.settings.play_button_background
-                    endif
-                  endcapture
-                -%}
-  
-                {%- if media_content != blank -%}
-                  {%- if block.type == 'image_with_text' and block.settings.link_url != blank -%}
-                    <a href="{{ block.settings.link_url }}" class="overflow-hidden figure-part">
-                      {{- media_content -}}
-                    </a>
-                  {%- else -%}
-                    <div class="overflow-hidden figure-part">
-                      {{- media_content -}}
-                    </div>
-                  {%- endif -%}
-                {%- endif -%}
-  
-                {%- if block.settings.title != blank or block.settings.content != blank or block.settings.link_text != blank -%}
-                  <div class="prose text-{{ section.settings.text_alignment }} text-part">
-                    {%- if block.settings.title != blank -%}
-                      <p class="{{ block.settings.heading_tag }} heading-part">{{ block.settings.title }}</p>
+    {% assign isTrouve = false %}
+    {%- for block in section.blocks -%}
+      {% if block.settings.title != blank or block.settings.content != blank  or block.settings.image != blank %}
+        {% assign isTrouve = true %}
+      {%endif%}
+    {% endfor %}
+    {% if isTrouve %}
+      <div class="section-spacing {% if section.settings.separate_section_with_border %}bordered-section{% endif %}">
+        <div class="container {% unless section.settings.container_size == 'full' %}container--{{ section.settings.container_size }}{% endunless %}">
+          <div class="section-stack main-stack-container">
+            {%- render 'section-header', subheading: section.settings.subheading, heading: section.settings.title, content: section.settings.content, text_alignment: section.settings.content_alignment -%}
+    
+            {% comment %} {% endcomment %}
+            <div class="lg-max:hidden">
+              <multi-column class="multi-column {% unless section.settings.stack_on_mobile %}scroll-area snap-x bleed md:unbleed{% endunless %}">
+                {%- for block in section.blocks -%}
+                  <div class="multi-column__item {% if section.settings.overlap_image and block.settings.title != blank %}multi-column__item--overlap{% endif %} snap-center group" {{ block.shopify_attributes }}>
+                    {%- capture sizes_attribute -%}
+                      (max-width: 699px) 53vw, (max-width: 999px) 38vw, calc((100vw - 3rem * 2) / {{ section.settings.columns_per_row }})
+                    {%- endcapture -%}
+      
+                    {%- liquid
+                      capture media_content
+                        if block.type == 'image_with_text' and block.settings.image != blank
+                          echo block.settings.image | image_url: width: block.settings.image.width | image_tag: loading: 'lazy', sizes: sizes_attribute, widths: '300,400,500,600,800,1000,1200,1400,1600,1800', class: 'zoom-image group-hover:zoom'
+                        elsif block.type == 'video_with_text' and block.settings.video != blank
+                          if block.settings.autoplay and block.settings.loop
+                            assign show_controls = false
+                          else
+                            assign show_controls = true
+                          endif
+      
+                          render 'media', media: block.settings.video, autoplay: block.settings.autoplay, loop: block.settings.loop, controls: show_controls, sizes: sizes_attribute, play_button_background: block.settings.play_button_background
+                        endif
+                      endcapture
+                    -%}
+      
+                    {%- if media_content != blank -%}
+                      {%- if block.type == 'image_with_text' and block.settings.link_url != blank -%}
+                        <a href="{{ block.settings.link_url }}" class="overflow-hidden figure-part">
+                          {{- media_content -}}
+                        </a>
+                      {%- else -%}
+                        <div class="overflow-hidden figure-part">
+                          {{- media_content -}}
+                        </div>
+                      {%- endif -%}
                     {%- endif -%}
-                    
-                    <div class="content-part">
-                      {{- block.settings.content -}}
-                    </div>
-  
-                    {%- if block.settings.link_text != blank -%}
-                      <a href="{{ block.settings.link_url }}" class="link">{{ block.settings.link_text | escape }}</a>
+      
+                    {%- if block.settings.title != blank or block.settings.content != blank or block.settings.link_text != blank -%}
+                      <div class="prose text-{{ section.settings.text_alignment }} text-part">
+                        {%- if block.settings.title != blank -%}
+                          <p class="{{ block.settings.heading_tag }} heading-part">{{ block.settings.title }}</p>
+                        {%- endif -%}
+                        
+                        <div class="content-part">
+                          {{- block.settings.content -}}
+                        </div>
+      
+                        {%- if block.settings.link_text != blank -%}
+                          <a href="{{ block.settings.link_url }}" class="link">{{ block.settings.link_text | escape }}</a>
+                        {%- endif -%}
+                      </div>
                     {%- endif -%}
                   </div>
-                {%- endif -%}
-              </div>
-            {%- endfor -%}
-          </multi-column>
+                {%- endfor -%}
+              </multi-column> 
+            </div>
+
+
+            <div class="lg:hidden">
+              {%- assign carousel_mobile_id = 'multi-column-v2-' | append: block.id -%}
+    
+                <scroll-carousel class="multi-column {% unless section.settings.stack_on_mobile %}scroll-area snap-x bleed md:unbleed{% endunless %} product-gallery__carousel scroll-area" id="{{ carousel_mobile_id }}">
+
+                  {%- for block in section.blocks -%}
+                      <div class="multi-column__item {% if section.settings.overlap_image and block.settings.title != blank %}multi-column__item--overlap{% endif %} snap-center group" {{ block.shopify_attributes }}>
+                        {%- capture sizes_attribute -%}
+                          (max-width: 699px) 53vw, (max-width: 999px) 38vw, calc((100vw - 3rem * 2) / {{ section.settings.columns_per_row }})
+                        {%- endcapture -%}
+          
+                        {%- liquid
+                          capture media_content
+                            if block.type == 'image_with_text' and block.settings.image != blank
+                              echo block.settings.image | image_url: width: block.settings.image.width | image_tag: loading: 'lazy', sizes: sizes_attribute, widths: '300,400,500,600,800,1000,1200,1400,1600,1800', class: 'zoom-image group-hover:zoom'
+                            elsif block.type == 'video_with_text' and block.settings.video != blank
+                              if block.settings.autoplay and block.settings.loop
+                                assign show_controls = false
+                              else
+                                assign show_controls = true
+                              endif
+          
+                              render 'media', media: block.settings.video, autoplay: block.settings.autoplay, loop: block.settings.loop, controls: show_controls, sizes: sizes_attribute, play_button_background: block.settings.play_button_background
+                            endif
+                          endcapture
+                        -%}
+          
+                        {%- if media_content != blank -%}
+                          {%- if block.type == 'image_with_text' and block.settings.link_url != blank -%}
+                            <a href="{{ block.settings.link_url }}" class="overflow-hidden figure-part">
+                              {{- media_content -}}
+                            </a>
+                          {%- else -%}
+                            <div class="overflow-hidden figure-part">
+                              {{- media_content -}}
+                            </div>
+                          {%- endif -%}
+                        {%- endif -%}
+          
+                        {%- if block.settings.title != blank or block.settings.content != blank or block.settings.link_text != blank -%}
+                          <div class="prose text-{{ section.settings.text_alignment }} text-part">
+                            {%- if block.settings.title != blank -%}
+                              <p class="{{ block.settings.heading_tag }} heading-part">{{ block.settings.title }}</p>
+                            {%- endif -%}
+                            
+                            <div class="content-part">
+                              {{- block.settings.content -}}
+                            </div>
+          
+                            {%- if block.settings.link_text != blank -%}
+                              <a href="{{ block.settings.link_url }}" class="link">{{ block.settings.link_text | escape }}</a>
+                            {%- endif -%}
+                          </div>
+                        {%- endif -%}
+                      </div>
+                {%- endfor -%}
+                
+              </scroll-carousel>
+    
+              {%- if section.blocks.size > 1 -%}
+                <carousel-navigation class="page-dots align-self-center" aria-controls="{{ carousel_mobile_id }}">
+                    {%- for block in section.blocks -%}
+                      <button type="button" class="tap-area" aria-current="{% if forloop.first %}true{% else %}false{% endif %}">
+                        <span class="sr-only">{{ 'general.accessibility.go_to_item' | t: index: forloop.index0 }}</span>
+                      </button>
+                    {%- endfor -%}
+                </carousel-navigation>
+              {%- endif -%}
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+    {%endif%}
   {%- endif -%}
   
   {% schema %}
