begin working on icon columns

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,3 +4,4 @@ $active-color:#0500FF;
 @import 'views/pdp.scss';
 @import 'components/scroll-slider.scss';
 @import 'components/image-with-text.scss';
+@import 'components/icon-with-text.scss';
